[tool.poetry]
name = "akku"
version = "0.1.0"
description = "Personal tracker for mental health"
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
tqdm = "^4.48.2"
orgparse = "^0.1.4"
calmap = "^0.0.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
